# AegisGraph

./: .gitignore  README.md
core/: agent.py  app.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(chat)/chat/: page.tsx
frontend/app/(chat)/chat/[sessionId]/: page.tsx
frontend/app/api/auth/login/: route.ts
frontend/app/api/auth/logout/: route.ts
frontend/app/api/auth/me/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/api/sessions/: route.ts
frontend/app/api/sessions/[id]/: route.ts
frontend/app/api/sessions/[id]/messages/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/components/: ChatApp.tsx  ChatInput.tsx  ChatThread.tsx  MessageBubble.tsx  Sidebar.tsx  ThinkingIndicator.tsx  UserMenu.tsx
frontend/app/lib/: db.ts  jwt.ts  neo4j.ts  types.ts
gateway/: CMakeLists.txt  dsu_binder.cpp  main.cpp
scripts/: ingest.py  init_postgres.sql  run.sh  seed_data.py  test_api_endpoints.py
